<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KTWeather</string>
    <string name="search_hint">Type place to search</string>
    <string name="net_connect_error">Please connect to mobile data or Wi-fi</string>
    <string name="loc_error">Please enable GPS or network location services for current location weather</string>
    <string name="weather_error">There was a problem in finding the weather of this place</string>
    <string name="place_add_error">This place has already been added</string>
    <string name="place_add_max_error">You cannot add more than 10 places</string>
    <string name="progress">Loading&#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="location">Current location weather</string>
    <string name="favourites">Favourite places</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_chill">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="degreeC">°C</string>
    <string name="degreeF">°F</string>
    <string name="today">Today</string>
    <string name="windSpeed">km/h</string>
    <string name="pressure_unit">mb</string>
    <string name="percent">%</string>
    <!-- Delete after this -->

    <string name="title_activity_favourite">Add Favourites</string>

</resources>
